# cpp-starter

./: .clang-tidy  CMakeLists.txt  compile_commands.json  fix_compile_commands.py  run.sh
.cache/clangd/index/: main.cpp.9E9AD08DFFC9969A.idx
src/: main.cpp
